# Netology_Home_Work

./: .gitignore  README.md
Advanced/Compilation_Linking/: Compilation_Linking.sln
Advanced/STL II/: STL II.sln
Advanced/Testing/: Testing.sln
Advanced_C++/Compilation_Linking/: Compilation_Linking.sln
Advanced_C++/Course_Project/: Course_Project.sln
Advanced_C++/Innovations/: Innovations.sln
Advanced_C++/Move_Semantic/: Move_Semantic.sln
Advanced_C++/RAII/: RAII.sln
Advanced_C++/STL I/: STL I.sln
Advanced_C++/Smart_PTR/: Smart_PTR.sln
Advanced_C++/Templates_Functors/: Templates_Functors.sln
Advanced_C++/Testing/Task_1/: CMakeLists.txt  Task_1.vcxproj  main.cpp
Algorithms.Data.Structures/Digraph/: Digraph.sln
Algorithms.Data.Structures/GRAPHS/: GRAPHS.sln
Algorithms.Data.Structures/Pyramids_and_Trees/: Pyramids_and_Trees.sln
Algorithms_&_Data_Structures/Dynamic_array_Lists_Decks/: Dynamic_array_Lists_Decks.sln
Algorithms_&_Data_Structures/Hash/: Hash.sln
Algorithms_&_Data_Structures/Introduction_Binary_Search/: Introduction_Binary_Search.sln
Algorithms_&_Data_Structures/Recursion/: Recursion.sln
Algorithms_&_Data_Structures/Sort_Algorithms/: Sort_Algorithms.sln
Basic.Programming/LIBRARIES/Task_5_CMake_Hierarchy_DynamicLib/src/: CMakeLists.txt  equilateraltriangle.h  figure.h  isoscelestriangle.cpp  parallelogram.cpp  righttriangle.h
Basic_Programming_C++/CMAKE/Task_2_A_Bit_Harder/src/: CMakeLists.txt  quadrangle.h
Basic_Programming_C++/COURSE_PROJECT/: Course_Project.sln
Basic_Programming_C++/COURSE_PROJECT/CMake_Version/src/: AirVehicle.h  Boots.h  Broom.cpp  Broom.h  CMakeLists.txt  Centaur.cpp  Centaur.h  Eagle.cpp  FlyingCarpet.cpp  Functions.h  GameClient.cpp  Race.h  Vehicle.h
Database/3.Select.Requests/: Script-2.sql  Script-3.sql  select.sql
Database/4.Advanced.Select.Requests/: Create.sql  Insert.sql  Script-1.sql  Script-3.sql  Select.sql
Database/5.PostgreSQL.C++/: CMakeLists.txt  Task1.cpp  Urok5.cpp
Database/6.DataBase.ORM.C++/: main_orm_join.cpp
Multithreaded.Async.Programming/3_Async_Programming/: Async_Programming.sln
Multithreaded_&_Async_Programming/5_Packaging_Application/: Packaging_Application.sln
Multithreaded_&_Async_Programming/CourseWork/: CourseWork.sln
Multithreaded_&_Async_Programming/Multithreading/: Multithreading.sln
Multithreaded_&_Async_Programming/Race condition/: Race_condition.sln
Multithreaded_&_Async_Programming/Refactoring/: Refactoring.sln
Multithreading/: Multithreading.sln
(+411 files in other folders)
